Start lecture 2 and add exercises.

--- a/lecture_02_practical_1.ipynb
+++ b/lecture_02_practical_1.ipynb
@@ -1183,7 +1183,8 @@
     "    1. Try out three new mathematical functions implemented in this library.\n",
     "    2. Why didn't you have to install this library before importing it?\n",
     "    3. Make a list if cos(x) for the first 20 non-negative integers. (0, 1, . . . , 19)\n",
-    "2. How many times does the word \"the\" appear in the excerpt below? (try to do using what we've learned so far, and then try to find an easy \"one line\" solution with string method we haven't seen yet.\n",
+    "2. Calculate the mean of these numbers using a for loop: [1, 3, 5, 7, 9]. Is there an easier way you can find?\n",
+    "3. How many times does the word \"the\" appear in the excerpt below? (try to do using what we've learned so far, and then try to find an easy \"one line\" solution with string method we haven't seen yet.\n",
     "\n",
     ">Call me Ishmael.  Some years ago--never mind how long\n",
     "precisely--having little or no money in my purse, and nothing\n",
@@ -1232,9 +1233,9 @@
     "here they all unite.  Tell me, does the magnetic virtue of the\n",
     "needles of the compasses of all those ships attract them thither?\n",
     "\n",
-    "3. Create a list with the first 100 Fibonacci numbers. The Fibonacci sequence starts 1, 1, and then the $n$th number in the sequence is the sum of the previous two (1, 1, 2, 3, . . . ).\n",
-    "4. Write a function that takes a positive integer and returns True if the integer is prime and False otherwise. (Don't return the string 'True' or 'False' - return the special keyword True or False!)\n",
-    "5. Create a list with the first 100 prime numbers.\n"
+    "4. Create a list with the first 100 Fibonacci numbers. The Fibonacci sequence starts 1, 1, and then the $n$th number in the sequence is the sum of the previous two (1, 1, 2, 3, . . . ).\n",
+    "5. Write a function that takes a positive integer and returns True if the integer is prime and False otherwise. (Don't return the string 'True' or 'False' - return the special keyword True or False!)\n",
+    "6. Create a list with the first 100 prime numbers."
    ]
   },
   {
