Add to lecture 2 practical 2.

--- a/lecture_02_practical_2.ipynb
+++ b/lecture_02_practical_2.ipynb
@@ -22,12 +22,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 59,
    "id": "8430db5c",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import time"
    ]
   },
@@ -114,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c4c3fe2",
+   "id": "c3668e4c",
    "metadata": {},
    "source": [
     "It seems there is in fact a big speed advantage in this case!\n",
@@ -125,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7477d98a",
+   "id": "12c07f7a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e1e24df6",
+   "id": "6f286ac7",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "4ffc8151",
+   "id": "15eeb6b2",
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "76947085",
+   "id": "949e5841",
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "36d7ba36",
+   "id": "645ace04",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "167bd06e",
+   "id": "2fff8e33",
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d39c2a55",
+   "id": "326a401e",
    "metadata": {},
    "source": [
     "Yet another advantage is in providing a natural setting for us to do linear algebra - something lists do not provide. We now demonstrate this connection and introduce the numpy library and its core objects more systematically.\n",
@@ -254,17 +255,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "fc3e152d",
+   "execution_count": 78,
+   "id": "e373c2c8",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vector sum:  [ 3  6  9 12]\n",
-      "Element-wise product:  [ 2  8 18 32]\n",
-      "Dot product:  60\n"
+      "Vector sum:  [ 3  6  9 16]\n",
+      "Element-wise product:  [ 2  8 18 48]\n",
+      "Dot product:  76\n"
      ]
     }
    ],
@@ -272,7 +273,7 @@
     "# ndarrays can behave like vectors!\n",
     "\n",
     "vec_1 = np.array([1, 2, 3, 4])\n",
-    "vec_2 = np.array([2, 4, 6, 8])\n",
+    "vec_2 = np.array([2, 4, 6, 12])\n",
     "\n",
     "print('Vector sum: ', vec_1 + vec_2)\n",
     "print('Element-wise product: ', vec_1 * vec_2)\n",
@@ -281,8 +282,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "b81fe581",
+   "execution_count": 47,
+   "id": "2ebaebe6",
    "metadata": {},
    "outputs": [
     {
@@ -314,8 +315,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "529ea732",
+   "execution_count": 48,
+   "id": "d5361854",
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +327,7 @@
        "       [11, 16, 21]])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,8 +339,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "6514d854",
+   "execution_count": 49,
+   "id": "6b7191e6",
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +351,7 @@
        "       [50, 50]])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,31 +363,372 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "f8d735a2",
+   "execution_count": 50,
+   "id": "54e3cc26",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[[1, 2, 3], [4, 5, 6]], [[1, 1, 1], [2, 2, 2]]]"
+       "array([[[1, 2, 3],\n",
+       "        [4, 5, 6]],\n",
+       "\n",
+       "       [[1, 1, 1],\n",
+       "        [2, 2, 2]]])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# ndarrays can be higher-order things (tensors)\n",
-    "ten_1 = [[[1, 2, 3], [4, 5, 6]], [[1, 1, 1], [2, 2, 2]]]\n",
+    "ten_1 = np.array([[[1, 2, 3], [4, 5, 6]], [[1, 1, 1], [2, 2, 2]]])\n",
     "ten_1"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 53,
+   "id": "709bb477",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vec_1:  [1 2 3 4]\n",
+      "vec_1 - shape:  (4,)  ndim:  1  size:  4\n",
+      "mat_1: \n",
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n",
+      "mat_1 - shape:  (3, 3)  ndim:  2  size:  9\n",
+      "ten_1: \n",
+      "[[[1 2 3]\n",
+      "  [4 5 6]]\n",
+      "\n",
+      " [[1 1 1]\n",
+      "  [2 2 2]]]\n",
+      "ten_1 - shape:  (2, 2, 3)  ndim:  3  size:  12\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Each of these things have many properties, however shape, ndim, and size are useful to start with\n",
+    "\n",
+    "print(\"vec_1: \", vec_1)\n",
+    "print(\"vec_1 - shape: \", vec_1.shape, \" ndim: \", vec_1.ndim, \" size: \", vec_1.size)\n",
+    "\n",
+    "print(\"mat_1: \")\n",
+    "print(mat_1)\n",
+    "print(\"mat_1 - shape: \", mat_1.shape, \" ndim: \", mat_1.ndim, \" size: \", mat_1.size)\n",
+    "\n",
+    "print(\"ten_1: \")\n",
+    "print(ten_1)\n",
+    "print(\"ten_1 - shape: \", ten_1.shape, \" ndim: \", ten_1.ndim, \" size: \", ten_1.size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "118c7ebc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sliced vector:\n",
+      "[1 2]\n",
+      "Sliced matrix:\n",
+      "[[2 3]\n",
+      " [5 6]]\n",
+      "Sliced tensor:\n",
+      "[3 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Like lists, ndarrays can be sliced, with one set of indices per dimension\n",
+    "\n",
+    "# Slicing a vector\n",
+    "print('Sliced vector:')\n",
+    "print(vec_1[:2])\n",
+    "\n",
+    "# Slicing a matrix\n",
+    "print('Sliced matrix:')\n",
+    "print(mat_1[:2, 1:])\n",
+    "\n",
+    "# Slicing a tensor\n",
+    "print('Sliced tensor:')\n",
+    "print(ten_1[0, 0:2, 2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e34e359d",
+   "metadata": {},
+   "source": [
+    "I encourage you to review numpy in more detail [here](https://numpy.org/devdocs/user/quickstart.html), but for now we leave numpy behind and move on to pandas - in particular, the pandas series and dataframe.\n",
+    "\n",
+    "The pandas dataframe is the common setting for most data science and analysis tasks that concern tabular data. It contains rows and columns of data along with labels for the rows and columns so that we can reference the data easily. A single column of a pandas dataframe is a Series, and it behaves very similarly to a 1-dimensional numpy array, with the notable exception that each element is labelled via the index.\n",
+    "\n",
+    "We create a pandas Series by passing in the data and index. The data can be many things (like a dictionary or numpy array) and the index can be left blank if there is no natural one."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "2e1e2946",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    1\n",
+       "1    2\n",
+       "2    3\n",
+       "3    4\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# creating a series from a numpy array and using the default index\n",
+    "\n",
+    "my_series_1 = pd.Series(vec_1)\n",
+    "my_series_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "096c5776",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "a    1\n",
+       "b    2\n",
+       "c    3\n",
+       "d    4\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# creating a series and using a specific index\n",
+    "my_series_2 = pd.Series(vec_1, index=['a','b','c','d'])\n",
+    "my_series_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "0cbcbaca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a    1\n",
+      "c    3\n",
+      "dtype: int64\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# subsetting is natural by index\n",
+    "print(my_series_2[['a','c']])\n",
+    "\n",
+    "# you can also access elements like a dictionary\n",
+    "print(my_series_2['b'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "e64edfcc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "a    0.540302\n",
+       "b   -0.416147\n",
+       "c   -0.989992\n",
+       "d   -0.653644\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# things that work on numpy arrays generally work on Series\n",
+    "np.cos(my_series_2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d9ceb9b",
+   "metadata": {},
+   "source": [
+    "Pandas series also have a name attribute that we can set. This becomes natural, when we consider dataframes. This is because the columns of a dataframe will be series, and the column name will be the series name."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "be235064",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "foo    1\n",
+      "bar    2\n",
+      "baz    3\n",
+      "bat    4\n",
+      "Name: integers, dtype: int64\n",
+      "integers\n"
+     ]
+    }
+   ],
+   "source": [
+    "# I have a name\n",
+    "named_series = pd.Series(vec_1, index=['foo', 'bar', 'baz', 'bat'], name='integers')\n",
+    "print(named_series)\n",
+    "print(named_series.name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad876336",
+   "metadata": {},
+   "source": [
+    "Armed with the knowledge that a series is a like a numpy array with an index and a name, we can move on to pandas dataframes, which will be like a bunch of Series stuck side by side.\n",
+    "\n",
+    "We can create pandas dataframes in many ways - we generally need to specify:\n",
+    "1. The data.\n",
+    "2. The column names (we can ignore this and use defaults).\n",
+    "3. The row names (we can ignore this and use defaults).\n",
+    "\n",
+    "Two common such ways are from a dictionary or from a csv."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "757ad25d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_dictionary = {'integers': pd.Series(vec_1, index=['a', 'b', 'c', 'd']),\n",
+    "                 'even_integers': pd.Series(vec_2, index=['a', 'b', 'c', 'f'])}\n",
+    "my_df = pd.DataFrame(my_dictionary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "2bce75e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>integers</th>\n",
+       "      <th>even_integers</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>a</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>b</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>c</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>d</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>f</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>12.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   integers  even_integers\n",
+       "a       1.0            2.0\n",
+       "b       2.0            4.0\n",
+       "c       3.0            6.0\n",
+       "d       4.0            NaN\n",
+       "f       NaN           12.0"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# note how the index is observed and NaNs are created!\n",
+    "my_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "e4ab2713",
+   "id": "8731621e",
    "metadata": {},
    "outputs": [],
    "source": []
