Add data for lecture 2.

--- a/lecture_02_practical_2.ipynb
+++ b/lecture_02_practical_2.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3668e4c",
+   "id": "a432e972",
    "metadata": {},
    "source": [
     "It seems there is in fact a big speed advantage in this case!\n",
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "12c07f7a",
+   "id": "3092b018",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "6f286ac7",
+   "id": "b32536b6",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "15eeb6b2",
+   "id": "ec6ea499",
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "949e5841",
+   "id": "829e427f",
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "645ace04",
+   "id": "3def82f3",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "2fff8e33",
+   "id": "b5567bc2",
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "326a401e",
+   "id": "5c9a475a",
    "metadata": {},
    "source": [
     "Yet another advantage is in providing a natural setting for us to do linear algebra - something lists do not provide. We now demonstrate this connection and introduce the numpy library and its core objects more systematically.\n",
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "e373c2c8",
+   "id": "61df863e",
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "2ebaebe6",
+   "id": "93dd27d8",
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "d5361854",
+   "id": "810420ed",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "6b7191e6",
+   "id": "6210cc7e",
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "54e3cc26",
+   "id": "71a24991",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "709bb477",
+   "id": "0fe0b388",
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "118c7ebc",
+   "id": "39c81cde",
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e34e359d",
+   "id": "df29f8ab",
    "metadata": {},
    "source": [
     "I encourage you to review numpy in more detail [here](https://numpy.org/devdocs/user/quickstart.html), but for now we leave numpy behind and move on to pandas - in particular, the pandas series and dataframe.\n",
@@ -481,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "2e1e2946",
+   "id": "a8027c16",
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "096c5776",
+   "id": "4f0f27f6",
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "0cbcbaca",
+   "id": "7903b39e",
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "e64edfcc",
+   "id": "c4526907",
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d9ceb9b",
+   "id": "23655e9b",
    "metadata": {},
    "source": [
     "Pandas series also have a name attribute that we can set. This becomes natural, when we consider dataframes. This is because the columns of a dataframe will be series, and the column name will be the series name."
@@ -595,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "be235064",
+   "id": "7f35bf14",
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad876336",
+   "id": "b49d1d60",
    "metadata": {},
    "source": [
     "Armed with the knowledge that a series is a like a numpy array with an index and a name, we can move on to pandas dataframes, which will be like a bunch of Series stuck side by side.\n",
@@ -636,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "757ad25d",
+   "id": "4f467bf7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,8 +647,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "id": "2bce75e5",
+   "execution_count": 83,
+   "id": "1f85c68b",
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +715,7 @@
        "f       NaN           12.0"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,8 +727,220 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 87,
+   "id": "36e3f616",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# there are many options for reading from a csv depending on how the .csv file is structured\n",
+    "my_df_2 = pd.read_csv('lecture_02_data.csv',\n",
+    "                      names =['sex', 'length', 'diameter', 'height',\n",
+    "                              'whole_weight', 'shucked_weight', 'viscera_weight',\n",
+    "                              'shell_weight', 'rings'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "9cdb1282",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sex</th>\n",
+       "      <th>length</th>\n",
+       "      <th>diameter</th>\n",
+       "      <th>height</th>\n",
+       "      <th>whole_weight</th>\n",
+       "      <th>shucked_weight</th>\n",
+       "      <th>viscera_weight</th>\n",
+       "      <th>shell_weight</th>\n",
+       "      <th>rings</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>M</td>\n",
+       "      <td>0.455</td>\n",
+       "      <td>0.365</td>\n",
+       "      <td>0.095</td>\n",
+       "      <td>0.5140</td>\n",
+       "      <td>0.2245</td>\n",
+       "      <td>0.1010</td>\n",
+       "      <td>0.150</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>M</td>\n",
+       "      <td>0.350</td>\n",
+       "      <td>0.265</td>\n",
+       "      <td>0.090</td>\n",
+       "      <td>0.2255</td>\n",
+       "      <td>0.0995</td>\n",
+       "      <td>0.0485</td>\n",
+       "      <td>0.070</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>F</td>\n",
+       "      <td>0.530</td>\n",
+       "      <td>0.420</td>\n",
+       "      <td>0.135</td>\n",
+       "      <td>0.6770</td>\n",
+       "      <td>0.2565</td>\n",
+       "      <td>0.1415</td>\n",
+       "      <td>0.210</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>M</td>\n",
+       "      <td>0.440</td>\n",
+       "      <td>0.365</td>\n",
+       "      <td>0.125</td>\n",
+       "      <td>0.5160</td>\n",
+       "      <td>0.2155</td>\n",
+       "      <td>0.1140</td>\n",
+       "      <td>0.155</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>I</td>\n",
+       "      <td>0.330</td>\n",
+       "      <td>0.255</td>\n",
+       "      <td>0.080</td>\n",
+       "      <td>0.2050</td>\n",
+       "      <td>0.0895</td>\n",
+       "      <td>0.0395</td>\n",
+       "      <td>0.055</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>I</td>\n",
+       "      <td>0.425</td>\n",
+       "      <td>0.300</td>\n",
+       "      <td>0.095</td>\n",
+       "      <td>0.3515</td>\n",
+       "      <td>0.1410</td>\n",
+       "      <td>0.0775</td>\n",
+       "      <td>0.120</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>F</td>\n",
+       "      <td>0.530</td>\n",
+       "      <td>0.415</td>\n",
+       "      <td>0.150</td>\n",
+       "      <td>0.7775</td>\n",
+       "      <td>0.2370</td>\n",
+       "      <td>0.1415</td>\n",
+       "      <td>0.330</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>F</td>\n",
+       "      <td>0.545</td>\n",
+       "      <td>0.425</td>\n",
+       "      <td>0.125</td>\n",
+       "      <td>0.7680</td>\n",
+       "      <td>0.2940</td>\n",
+       "      <td>0.1495</td>\n",
+       "      <td>0.260</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>M</td>\n",
+       "      <td>0.475</td>\n",
+       "      <td>0.370</td>\n",
+       "      <td>0.125</td>\n",
+       "      <td>0.5095</td>\n",
+       "      <td>0.2165</td>\n",
+       "      <td>0.1125</td>\n",
+       "      <td>0.165</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>F</td>\n",
+       "      <td>0.550</td>\n",
+       "      <td>0.440</td>\n",
+       "      <td>0.150</td>\n",
+       "      <td>0.8945</td>\n",
+       "      <td>0.3145</td>\n",
+       "      <td>0.1510</td>\n",
+       "      <td>0.320</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  sex  length  diameter  height  whole_weight  shucked_weight  viscera_weight  \\\n",
+       "0   M   0.455     0.365   0.095        0.5140          0.2245          0.1010   \n",
+       "1   M   0.350     0.265   0.090        0.2255          0.0995          0.0485   \n",
+       "2   F   0.530     0.420   0.135        0.6770          0.2565          0.1415   \n",
+       "3   M   0.440     0.365   0.125        0.5160          0.2155          0.1140   \n",
+       "4   I   0.330     0.255   0.080        0.2050          0.0895          0.0395   \n",
+       "5   I   0.425     0.300   0.095        0.3515          0.1410          0.0775   \n",
+       "6   F   0.530     0.415   0.150        0.7775          0.2370          0.1415   \n",
+       "7   F   0.545     0.425   0.125        0.7680          0.2940          0.1495   \n",
+       "8   M   0.475     0.370   0.125        0.5095          0.2165          0.1125   \n",
+       "9   F   0.550     0.440   0.150        0.8945          0.3145          0.1510   \n",
+       "\n",
+       "   shell_weight  rings  \n",
+       "0         0.150     15  \n",
+       "1         0.070      7  \n",
+       "2         0.210      9  \n",
+       "3         0.155     10  \n",
+       "4         0.055      7  \n",
+       "5         0.120      8  \n",
+       "6         0.330     20  \n",
+       "7         0.260     16  \n",
+       "8         0.165      9  \n",
+       "9         0.320     19  "
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_df_2.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "8731621e",
+   "id": "ef3b0da5",
    "metadata": {},
    "outputs": [],
    "source": []
